[gd_scene load_steps=3 format=2]

[ext_resource path="res://level/level_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://level/level1.gd" type="Script" id=2]

[node name="Level1" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TowerPos1" type="Position2D" parent="." index="1"]
position = Vector2( 192, 192 )

[node name="TowerPos2" type="Position2D" parent="." index="2"]
position = Vector2( 448, 192 )

[node name="TowerPos3" type="Position2D" parent="." index="3"]
position = Vector2( 576, 256 )

[node name="TroopStart" parent="." index="4"]
position = Vector2( 32, 32 )

[node name="TroopEnd" parent="." index="5"]
position = Vector2( 968, 928 )
